--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- DaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
@@ -16,35 +17,16 @@
   </head>
   <body>
 
-    <div class="sticky top-0 z-50 navbar baseColor">
-      <div class="navbar-start">
-        <div class="dropdown">
-          <label tabindex="0" class="btn btn-ghost xl:hidden">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
-            </svg>
-          </label>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
-            <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
-            <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
-            <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
-            <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
-            <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
-            <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
-            <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
-          </ul>
-        </div>
-        <a href=".">
-          <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#E2883B] font-bold hover:bg-[#FCFAEE]">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
-            </svg>
-            marina tatshani
-          </button>
-        </a>
-      </div>
-      <div class="navbar-end hidden xl:flex">
-        <ul class="menu menu-horizontal px-1 font-bold text-base">
+  <!-- NAVBAR -->
+  <div class="sticky top-0 z-50 navbar baseColor">
+    <div class="navbar-start">
+      <div class="dropdown">
+        <label tabindex="0" class="btn btn-ghost xl:hidden">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
+          </svg>
+        </label>
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-stone-200 rounded-box w-52 font-bold">
           <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
           <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
           <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
@@ -54,7 +36,27 @@
           <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
         </ul>
       </div>
+      <a href=".">
+        <button class="btn btn-ghost w-max normal-case text-xl lg:text-2xl text-[#CBC6FD] font-bold hover:bg-[#FCFAEE]">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+          </svg>
+          marina tatshani
+        </button>
+      </a>
     </div>
+    <div class="navbar-end hidden xl:flex">
+      <ul class="menu menu-horizontal px-1 font-bold text-base">
+        <li><a href="about" class="hover:text-[#A697AD]">ABOUT</a></li>
+        <li><a href="resume" class="hover:text-[#A697AD]">RESUME</a></li>
+        <li><a href="graphic" class="hover:text-[#A697AD]">GRAPHIC DESIGN</a></li>
+        <li><a href="3d" class="hover:text-[#A697AD]">3D VISUALS</a></li>
+        <li><a href="web" class="hover:text-[#A697AD]">WEB DESIGN</a></li>
+        <li><a href="furniture" class="hover:text-[#A697AD]">FURNITURE</a></li>
+        <!-- <li><a href="blog" class="hover:text-[#A697AD]">BLOG</a></li> -->
+      </ul>
+    </div>
+  </div>
 
   <div class="main">
     <div class="grid grid-cols-1 gap-10">
@@ -163,6 +165,7 @@
 
   </div>
 
+  <!-- FOOTER -->
   <footer class="footer items-center py-14">
     <aside class="items-center grid-flow-row lg:grid-flow-col">
       <p class="text-xl lg:text-2xl font-bold pr-10">marinatatshani@gmail.com</p>
