--- a/graphic.html
+++ b/graphic.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- DaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
@@ -59,18 +60,24 @@
 
   <div class="main">
     <!-- HEADER -->
-    <div class="flex flex-col pt-40 pb-20">
-        <!-- <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2018-2023</p> -->
-        <p class="font-bold text-5xl lg:text-6xl pb-10">Graphic Design</p>
-        <p class="text-lg max-w-4xl">
-          Selected works from my freelance design projects and my position as an Associate Art Director.
-          Graphic design projects showcased here includes corporate branding, rebranding, package
-          design, and social media campaigns.
-        </p>
+    <div class="flex flex-col pt-10 pb-20">
+      <img
+        src="images/icons/Icon - Graphic Design.png"
+        alt="image"
+        width="250"
+        height="250"
+      />
+      <p class="font-bold text-5xl lg:text-6xl pb-5">Graphic Design</p>
+      <p class="text-lg max-w-4xl">
+        Featured here is a selection of work from my freelance design<br/>
+        projects & my role as Associate Art Director. This portfolio<br/>
+        highlights expertise in corporate branding, rebranding, packaging<br/>
+        design, illustration, motion graphics, and social media campaigns.
+      </p>
     </div>
 
     <!-- GALLERY -->
-    <div class="grid grid-cols-1 gap-20 lg:gap-32">
+    <div class="grid grid-cols-1 gap-20 lg:gap-32 pb-24">
         <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
           <div>
             <div class="content">
@@ -433,58 +440,18 @@
         </div>
     </div>
 
-    <div class="py-28"></div>
-
-    <!-- VIEW MY OTHER WORKS -->
-    <!-- <div class="flex flex-col items-center pt-10 pb-40">
-      <p class="text-4xl lg:text-5xl font-bold text-center pb-10">view my other works</p>
-      <div class="grid grid-cols-1 justify-items-center gap-10 md:grid-cols-2 md:gap-40">
-        <a href="furniture">
-          <button class="btn normal-case btn-neutral w-60">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
-            </svg>
-            furniture design
-          </button>
-        </a>
-        <a href="3d">
-          <button class="btn normal-case btn-neutral w-60">
-            3d animation
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </a>
-      </div>
-    </div> -->
-
   </div>
 
   <!-- EXPLORE MY PORTFOLIO -->
   <div class="explore-portfolio">
-    <h1 class="font-bold text-3xl lg:text-4xl pb-10">Explore my Portfolio</h1>
+    <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl pb-10">Explore my Portfolio</h1>
 
-    <div class="grid grid-cols-1 lg:grid-cols-4 gap-20 lg:gap-4">
-      <a href="furniture">
-        <div class="grid grid-cols-1 bg-[#DBE65D] portfolio-box">
-          <p>furniture<br/>design</p>
+    <div class="grid grid-cols-1 gap-5 sm:grid-cols-2 md:gap-4 lg:grid-cols-4 ">
+      <a href="graphic">
+        <div class="grid grid-cols-1 bg-[#CBC6FD] portfolio-box">
+          <p>graphic<br/>design</p>
           <img
-            src="images/portfolio/Portfolio-Furniture.jpg"
-            alt="image"
-          >
-          <button class="portfolio-button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
-              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
-            </svg>
-          </button>
-        </div>
-      </a>
-
-      <a href="3d">
-        <div class="grid grid-cols-1 bg-[#F7E6C3] portfolio-box">
-          <p>3d<br/>visualization</p>
-          <img
-            src="images/portfolio/Portfolio-3D.jpg"
+            src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
           >
           <button class="portfolio-button">
@@ -515,6 +482,21 @@
           <p>3d<br/>visualization</p>
           <img
             src="images/portfolio/Portfolio-3D.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="web">
+        <div class="grid grid-cols-1 bg-[#F0EFFF] portfolio-box">
+          <p>web<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
           >
           <button class="portfolio-button">
@@ -528,9 +510,10 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer class="footer items-center py-14">
     <aside class="items-center grid-flow-row lg:grid-flow-col">
-      <p class="text-2xl lg:text-3xl font-bold pr-10">marinatatshani@gmail.com</p>
+      <p class="text-xl lg:text-2xl font-bold pr-10">marinatatshani@gmail.com</p>
       <div class="flex flex-row gap-4">
         <a href="https://www.instagram.com/by__tatshani/" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
