--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="robots" content="noindex, nofollow">
 
     <!-- DaisyUI -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.7.6/dist/full.css" rel="stylesheet" type="text/css" />
@@ -339,13 +340,13 @@
 
   <!-- MY WORK EXPERIENCE -->
   <div class="main">
-    <div class="grid grid-cols-1 gap-10 md:grid-cols-2 md:gap-0 py-16">
+    <div class="grid grid-cols-1 gap-10 md:grid-cols-2 lg:gap-0 py-16">
       <div class="flex justify-center">
         <img
           src="images/CTA-Work Experience.svg"
           alt="image"
-          width="60%"
-          height="60%"
+          width="400"
+          height="400"
         >
       </div>
       <div class="flex flex-col gap-10 justify-center">
@@ -368,6 +369,7 @@
     </div>
   </div>
 
+  <!-- FOOTER -->
   <footer class="footer items-center py-14">
     <aside class="items-center grid-flow-row lg:grid-flow-col">
       <p class="text-xl lg:text-2xl font-bold pr-10">marinatatshani@gmail.com</p>
