--- a/index.html
+++ b/index.html
@@ -274,16 +274,17 @@
   <div class="explore-portfolio">
     <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl pb-10">Explore my Portfolio</h1>
 
-    <div class="grid grid-cols-1 gap-5 sm:grid-cols-2 md:gap-4 lg:grid-cols-4 ">
+    <div class="grid grid-cols-2 gap-4 lg:grid-cols-4">
+
       <a href="graphic">
-        <div class="grid grid-cols-1 bg-[#CBC6FD] portfolio-box">
-          <p>graphic<br/>design</p>
+        <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">graphic<br/>design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
           >
           <button class="portfolio-button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
             </svg>
           </button>
@@ -291,14 +292,14 @@
       </a>
 
       <a href="furniture">
-        <div class="grid grid-cols-1 bg-[#DBE65D] portfolio-box">
-          <p>furniture<br/>design</p>
+        <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">furniture<br/>design</p>
           <img
             src="images/portfolio/Portfolio-Furniture.jpg"
             alt="image"
           >
           <button class="portfolio-button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
             </svg>
           </button>
@@ -306,14 +307,14 @@
       </a>
 
       <a href="3d">
-        <div class="grid grid-cols-1 bg-[#F7E6C3] portfolio-box">
-          <p>3d<br/>visualization</p>
+        <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">3d<br/>visualization</p>
           <img
             src="images/portfolio/Portfolio-3D.jpg"
             alt="image"
           >
           <button class="portfolio-button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
             </svg>
           </button>
@@ -321,14 +322,14 @@
       </a>
 
       <a href="web">
-        <div class="grid grid-cols-1 bg-[#F0EFFF] portfolio-box">
-          <p>web<br/>design</p>
+        <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">web<br/>design</p>
           <img
             src="images/portfolio/Portfolio-Graphic Design.jpg"
             alt="image"
           >
           <button class="portfolio-button">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-10 h-10">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
             </svg>
           </button>
