--- a/web.html
+++ b/web.html
@@ -60,7 +60,7 @@
 
   <div class="main">
     <!-- HEADER -->
-    <div class="flex flex-col pt-40 pb-16">
+    <div class="flex flex-col pt-28 pb-16">
         <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2022</p>
         <p class="font-bold text-5xl lg:text-6xl pb-4">Website Design</p>
         <p class="text-lg">Selected works from my design projects during my position as an Associate Art Director.</p>
@@ -113,31 +113,76 @@
       </div>
     </div>
 
-    <div class="py-20"></div>
+    <div class="py-14"></div>
+  </div>
 
-    <!-- VIEW MY OTHER WORKS -->
-    <div class="flex flex-col items-center pt-10 pb-40">
-      <p class="text-4xl lg:text-5xl font-bold text-center pb-10">view my other works</p>
-      <div class="grid grid-cols-1 justify-items-center gap-10 md:grid-cols-2 md:gap-40">
-        <a href="3d">
-          <button class="btn normal-case btn-neutral w-60">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M17 10a.75.75 0 01-.75.75H5.612l4.158 3.96a.75.75 0 11-1.04 1.08l-5.5-5.25a.75.75 0 010-1.08l5.5-5.25a.75.75 0 111.04 1.08L5.612 9.25H16.25A.75.75 0 0117 10z" clip-rule="evenodd" />
-            </svg>
-            3d animation
-          </button>
-        </a>
-        <a href="furniture">
-          <button class="btn normal-case btn-neutral w-60">
-            furniture design
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+  <!-- EXPLORE MY PORTFOLIO -->
+  <div class="explore-portfolio">
+    <h1 class="font-bold text-2xl md:text-3xl lg:text-4xl pb-10">Explore my Portfolio</h1>
+
+    <div class="grid grid-cols-2 gap-4 lg:grid-cols-4">
+
+      <a href="graphic">
+        <div class="flex flex-col bg-[#CBC6FD] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">graphic<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
               <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
             </svg>
           </button>
-        </a>
-      </div>
-    </div>
+        </div>
+      </a>
 
+      <a href="furniture">
+        <div class="flex flex-col bg-[#DBE65D] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">furniture<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Furniture.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="3d">
+        <div class="flex flex-col bg-[#F7E6C3] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">3d<br/>visualization</p>
+          <img
+            src="images/portfolio/Portfolio-3D.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+      <a href="web">
+        <div class="flex flex-col bg-[#F0EFFF] portfolio-box rounded-[2rem] md:rounded-[4rem] xl:rounded-[6rem]">
+          <p class="text-xl md:text-2xl">web<br/>design</p>
+          <img
+            src="images/portfolio/Portfolio-Graphic Design.jpg"
+            alt="image"
+          >
+          <button class="portfolio-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="portfolio-arrow">
+              <path fill-rule="evenodd" d="M3 10a.75.75 0 01.75-.75h10.638L10.23 5.29a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H3.75A.75.75 0 013 10z" clip-rule="evenodd" />
+            </svg>
+          </button>
+        </div>
+      </a>
+
+    </div>
   </div>
 
   <!-- FOOTER -->
